ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-ingress
  namespace: your-portfolio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  ingressClassName: nginx
spec:
  tls:
  - hosts:
    - example.com
    secretName: your-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 3000
